<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorNombre"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:layout_toRightOf="@id/textView3"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorLogin"
            android:textStyle="bold"
            android:layout_below="@id/textView3"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:layout_below="@id/textView3"
            android:layout_toRightOf="@id/textView5"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorPassword"
            android:layout_below="@id/textView5"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:layout_below="@id/textView5"
            android:layout_toRightOf="@id/textView6"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorId"
            android:layout_below="@id/textView6"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:layout_below="@id/textView6"
            android:layout_toRightOf="@id/textView7"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>